tests/NormalTests/paczka1/fuzzy1/30289966.err
Error in line 12: A986 A471 69,1
Error in line 10: jZAOp A479 92,2
Error in line 5: 4USA4v A986 42,9
Error in line 25: ZTCsWcsIJ A471 404,4
Error in line 29: A986 S32 -1,6
Error in line 26: ZTCsWcsIJ A986 66,8
Error in line 17: A986 S32 39,2
Error in line 28: 2S5VyNSlINB A479 97,7
Error in line 23: jZAOp A986 46,8
